--- a/src/app/layouts/navbar/navbar.component.html
+++ b/src/app/layouts/navbar/navbar.component.html
@@ -5,7 +5,7 @@
         {{ RestaurantInfo.slogan }} </span>
       <span class="example-spacer"></span>
       <div fxShow="true" fxHide.lt-md="true">
-        <button mat-flat-button color="primary" class="matbtn" *ngFor="let menu of menus |async"
+        <button mat-flat-button color="primary" class="matbtn" *ngFor="let menu of menusByRoles"
           routerLink="{{ menu.menuLink }}">{{
       menu.menuName }}</button>
         <button mat-flat-button color="primary" class="matbtn" (click)="logOut()">logout</button>
