--- a/src/app/pages/pos/pos.component.html
+++ b/src/app/pages/pos/pos.component.html
@@ -48,24 +48,24 @@
               <mat-list>
                 <mat-list-item>
                   <div class="row" style="width: 100%;">
-                    <div class="col col-md-3 text-left font-weight-bold">ອາຫານ</div>
-                    <div class="col col-md-2 text-right font-weight-bold">ຈຳນວນ</div>
-                    <div class="col col-md-2 text-right font-weight-bold">ລາຄາ</div>
-                    <div class="col col-md-2 text-right font-weight-bold">ລວມ</div>
-                    <div class="col col-md-2 text-center font-weight-bold">ຂໍ້ຄວາມ</div>
-                    <div class="col col-md-1 text-right font-weight-bold">ຈັດການ</div>
+                    <div class="col col-sm-12 col-md-3 text-left font-weight-bold">ອາຫານ</div>
+                    <div class="col col-sm-12 col-md-2 text-right font-weight-bold">ຈຳນວນ</div>
+                    <div class="col col-sm-12 col-md-2 text-right font-weight-bold">ລາຄາ</div>
+                    <div class="col col-sm-12 col-md-2 text-right font-weight-bold">ລວມ</div>
+                    <div class="col col-sm-12 col-md-2 text-center font-weight-bold">ຂໍ້ຄວາມ</div>
+                    <div class="col col-sm-12 col-md-1 text-right font-weight-bold">ຈັດການ</div>
                   </div>
                 </mat-list-item>
                 <mat-divider></mat-divider>
                 <div class="listDiv">
                   <mat-list-item *ngFor="let cart of carts | async">
                     <div class="row" style="width: 100%;">
-                      <div class="col col-md-3 text-left text-nowrap">{{ cart.food }} {{ cart.subFood }}</div>
-                      <div class="col col-md-2 text-right">{{ cart.quantity | number }}</div>
-                      <div class="col col-md-2 text-right">{{ cart.price | number }}</div>
-                      <div class="col col-md-2 text-right"> {{ cart.total | number }}</div>
-                      <div class="col col-md-2 text-left">{{ cart.note }}</div>
-                      <div class="col col-md-1 text-center">
+                      <div class="col col-sm-12 col-md-3 text-left text-nowrap">{{ cart.food }} {{ cart.subFood }}</div>
+                      <div class="col col-sm-12 col-md-2 text-right">{{ cart.quantity | number }}</div>
+                      <div class="col col-sm-12 col-md-2 text-right">{{ cart.price | number }}</div>
+                      <div class="col col-sm-12 col-md-2 text-right"> {{ cart.total | number }}</div>
+                      <div class="col col-sm-12 col-md-2 text-left">{{ cart.note }}</div>
+                      <div class="col col-sm-12 col-md-1 text-center">
                         <img src="../../../assets/icons/baseline-note-24px.svg"
                           style="position: absolute; right:30px; cursor: pointer;" (click)="addnote(cart)">
                         <img src="../../../assets/icons/baseline-delete-24px.svg"
