--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -1,9 +1,8 @@
-<mat-card>
+<mat-card class="loginMainClass">
   <mat-card-title>
-    <div class="text-center display-4">
+    <div class="text-center">
       Welcome to letter'P <br>restaurant management system
     </div>
-
   </mat-card-title>
   <mat-card-content>
     <div class="text-center">
