--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -42,7 +42,10 @@
         </div>
         <div class="card">
           <div class="card-header">
-            Report by Revenue
+
+            <div class="font-weight-bold">
+              Report by Revenue
+            </div>
           </div>
           <div class="card-body">
             <div class="row">
@@ -52,7 +55,10 @@
                     Total revenue
                   </div>
                   <div class="card-body">
-                    DDDDDDDDDDDDDDDDDDDD
+                    <div class="row">
+                      <div class="col col-md-6 text-left display-4">ຍອດຂາຍ</div>
+                      <div class="col col-md-6 text-right display-4">{{ grandtotalAmount | number }}</div>
+                    </div>
                   </div>
                 </div>
               </div>
