--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -60,6 +60,9 @@
                       <div class="col col-md-6 text-right display-4">{{ grandtotalAmount | number }}</div>
                     </div>
                   </div>
+                  <div class="card-footer">
+
+                  </div>
                 </div>
               </div>
               <div class="col col-md-4">
