--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -1,12 +1,16 @@
 <mat-card class="loginMainClass">
   <mat-card-title>
-    <div class="text-center">
-      Welcome to letter'P <br>restaurant management system
+    <div class="text-center h1 mb-4">
+      Welcome to letter'P
     </div>
+    <img src="../../../assets/images/3B4693AD-6137-4CB9-AA4E-6A355BBCA126.png" class="rounded mx-auto d-block" alt="..."
+      style="max-width: 600px">
+
   </mat-card-title>
   <mat-card-content>
     <div class="text-center">
-      <button mat-raised-button color="primary" (click)="loginGoogle()">Google login</button>
+      <button mat-raised-button color="primary" (click)="loginGoogle()" class="mr-3">Google login</button>
+      <button mat-raised-button color="primary" (click)="loginGoogle()" class="mr-3">Facebook login</button>
     </div>
   </mat-card-content>
 </mat-card>
