--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -10,7 +10,8 @@
   <mat-card-content>
     <div class="text-center">
       <button mat-raised-button color="primary" (click)="loginGoogle()" class="mr-3">Google login</button>
-      <button mat-raised-button color="primary" (click)="loginGoogle()" class="mr-3">Facebook login</button>
+      <button mat-raised-button color="primary" (click)="loginFacebook()" class="mr-3">Facebook login</button>
+      <button mat-raised-button color="primary" (click)="loginFacebook()" class="mr-3">Email login</button>
     </div>
   </mat-card-content>
 </mat-card>
