--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -1,17 +1,51 @@
-<mat-card class="loginMainClass">
-  <mat-card-title>
-    <div class="text-center h1 mb-4">
-      Welcome to letter'P
-    </div>
-    <img src="../../../assets/images/3B4693AD-6137-4CB9-AA4E-6A355BBCA126.png" class="rounded mx-auto d-block" alt="..."
-      style="max-width: 600px">
+<link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed" rel="stylesheet">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
 
-  </mat-card-title>
-  <mat-card-content>
-    <div class="text-center">
-      <button mat-raised-button color="primary" (click)="loginGoogle()" class="mr-3">Google login</button>
-      <button mat-raised-button color="primary" (click)="loginFacebook()" class="mr-3">Facebook login</button>
-      <button mat-raised-button color="primary" (click)="loginFacebook()" class="mr-3">Email login</button>
+<div class="container" style="margin-top: 100px;">
+  <div class="row">
+    <div class="col-lg-4 col-sm-4 col-12 main-section">
+      <div class="modal-content">
+        <div class="text-center col-lg-12 col-sm-12 col-12 user-img">
+          <img src="../../../assets/images/man01.png">
+        </div>
+        <div class="text-center col-lg-12 col-sm-12 col-12 user-name">
+          <h1>Letter P User Login</h1>
+
+        </div>
+        <div class="col-lg-12 col-sm-12 col-12 form-input">
+          <form [formGroup]="usersForm">
+            <div class="form-group">
+              <input type="email" class="form-control" formControlName="email" id="email" autocomplete="off"
+                required="required" placeholder="email" />
+            </div>
+            <div class="form-group">
+              <input type="password" class="form-control" formControlName="password" autocomplete="off" minlength="6"
+                placeholder="password" id="Password" required="required" />
+            </div>
+            <button type="submit" class="btn btn-success btn-lg" (click)="loginByEmail()"
+              class="btn btn-success">Login</button>
+            <button type="submit" class="btn btn-primary btn-lg" (click)="openRegister()"
+              class="btn btn-success">ລົງທະບຽນໃໝ່</button>
+          </form>
+        </div>
+
+      </div>
     </div>
-  </mat-card-content>
-</mat-card>
+
+  </div>
+  <!-- Footer -->
+  <footer class="page-footer font-small blue">
+
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2019 Copyright:
+      <a href="https://www.letterp.com"> LetterP restaurant</a>
+    </div>
+    <!-- Copyright -->
+
+  </footer>
+  <!-- Footer -->
+</div>
