--- a/src/app/dialogs/user-register/user-register.component.html
+++ b/src/app/dialogs/user-register/user-register.component.html
@@ -16,11 +16,13 @@
         </div>
         <div class="form-group col-md-6">
           <label for="userName">username</label>
-          <input type="text" minlength="6" class="form-control" id="userName" formControlName="userName" required>
+          <input type="text" minlength="6" class="form-control" id="userName" formControlName="userName"
+            (keyup)="checkUserDuplicate($event.target.value)" required>
         </div>
         <div class="form-group col-md-6">
           <label for="email">email</label>
-          <input type="email" minlength="6" class="form-control" id="email" formControlName="email" required>
+          <input type="email" minlength="6" class="form-control" id="email"
+            (keyup)="checkEmailDuplicate($event.target.value)" formControlName="email" required>
         </div>
         <div class="form-group col-md-6">
           <label for="gender">ເພດ</label>
@@ -53,12 +55,13 @@
         </div>
         <div class="form-group col-md-6">
           <label for="userpassword">ລະຫັດ</label>
-          <input type="password" class="form-control" id="userpassword" (keyup)="checkPasswordIntegrity($event)"
-            formControlName="password" required>
+          <input type="password" autocomplete="off" class="form-control" id="userpassword"
+            (keyup)="checkPasswordIntegrity($event)" formControlName="password" required>
         </div>
         <div class="form-group col-md-6">
           <label for="re-password">ລະຫັດ ອີກຄັ້ງ</label>
-          <input type="password" class="form-control" (keyup)="checkPasswordIntegrity($event)" id="re-password">
+          <input type="password" class="form-control" autocomplete="off" (keyup)="checkPasswordIntegrity($event)"
+            id="re-password">
         </div>
       </div>
     </div>
