--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group">
               <input type="password" class="form-control" formControlName="password" autocomplete="off" minlength="6"
-                placeholder="password" id="Password" required="required" />
+                placeholder="password" id="password" required="required" />
             </div>
             <button type="submit" class="btn btn-success btn-lg" (click)="loginByEmail()"
               class="btn btn-success">Login</button>
