--- a/src/app/dialogs/user-register/user-register.component.html
+++ b/src/app/dialogs/user-register/user-register.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>ລົງທະບຽນ</h1>
+<h1 mat-dialog-title>{{ messageTitle }}</h1>
 <div class="alert alert-danger" role="alert" [ngClass]="showAlert">
   {{ message }}
 </div>
@@ -56,13 +56,22 @@
         <div class="form-group col-md-6">
           <label for="userpassword">ລະຫັດ</label>
           <input type="password" autocomplete="off" class="form-control" id="userpassword"
-            (keyup)="checkPasswordIntegrity($event)" formControlName="password" required>
+            (keyup)="checkPasswordIntegrity($event)" formControlName="password">
         </div>
         <div class="form-group col-md-6">
           <label for="re-password">ລະຫັດ ອີກຄັ້ງ</label>
           <input type="password" class="form-control" autocomplete="off" (keyup)="checkPasswordIntegrity($event)"
             id="re-password">
         </div>
+
+        <div class="form-group col-md-6" [ngClass]="showRole">
+          <label for="re-password">Role</label>
+          <select class="form-control" formControlName="role">
+            <option value="" disabled>------</option>
+            <option value="{{ role.roleCode }}" *ngFor="let role of roles | async">{{ role.roleCode }}</option>
+          </select>
+        </div>
+
       </div>
     </div>
   </div>
@@ -70,7 +79,7 @@
   <div class="row">
     <div class="col col-md-12 text-right mt-3">
       <button mat-flat-button color="primary" style="width: 200px;" (click)="addUser()"
-        [disabled]="saveBtnDisable">ບັນທຶກ</button>
+        [disabled]="saveBtnDisable">{{ buttonMessage }}</button>
     </div>
   </div>
 </form>
