--- a/src/app/dialogs/addbom/addbom.component.html
+++ b/src/app/dialogs/addbom/addbom.component.html
@@ -1,17 +1,18 @@
-<h1 mat-dialog-title>Add New BOM</h1>
+<h1 mat-dialog-title>{{ title }}</h1>
 <form [formGroup]="addBomForm">
   <div class="row">
     <div class="form-group col-md-3">
       <label for="food">ອາຫານ</label>
-      <select class="form-control" id="food" required (change)="foodSelectedChange($event.target.value)">
-        <option value="">------</option>
+      <select class="form-control" id="food" required (change)="foodSelectedChange($event.target.value)"
+        formControlName="food">
+        <option value="" disabled>------</option>
         <option value="{{food.foodId}}" *ngFor="let food of foods | async">{{ food.food_name }}</option>
       </select>
     </div>
     <div class="form-group col-md-3">
       <label for="product">Product</label>
       <select class="form-control" id="product" (change)="productSelectedChange($event.target.value)">
-        <option value="">------</option>
+        <option value="" disabled>------</option>
         <option value="{{ product.productCode }}" *ngFor="let product of products | async">{{ product.productName }}
         </option>
       </select>
@@ -39,7 +40,7 @@
           <th class="text-center">remove</th>
         </thead>
         <tbody>
-          <tr *ngFor="let product of productsBuffer ;let i = index">
+          <tr *ngFor="let product of productsBuffer;let i = index">
             <td class="text-center">{{ i + 1 }}</td>
             <td class="text-left">{{ product.productName }}</td>
             <td class="text-center">{{ product.bom_quantity |number}}</td>
@@ -51,6 +52,12 @@
           </tr>
         </tbody>
       </table>
+    </div>
+    <div class="card-footer">
+      <div class="text-right">
+        <button mat-raised-button color="primary" style="width: 200px;"
+          (click)="saveBom()">{{ saveButtonTitle }}</button>
+      </div>
     </div>
   </div>
 
