--- a/src/app/pages/bom/bom.component.html
+++ b/src/app/pages/bom/bom.component.html
@@ -1,3 +1,71 @@
-<p class="mt-3 text-center">
-  <button mat-raised-button color="primary" (click)="openAddBOM()">Add BOM</button>
-</p>
+<mat-card>
+  <mat-card-header>
+    <div mat-card-avatar class="example-header-image"></div>
+    <mat-card-title>Billing of Materials</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <div class="form-group row">
+      <div class="col col-sm-12 col-md-10">
+        <input type="text" class="form-control" placeholder="ຄົ້ນຫາ...">
+      </div>
+      <div class="col col-sm-12 col-md-2">
+        <button mat-raised-button color="primary" style="width: 100%;" (click)="openAddBOM()">Add new</button>
+      </div>
+    </div>
+
+    <div>
+      <table class="table table-bordered">
+        <thead class="thead-light">
+          <tr>
+            <th scope="col" class="text-center font-weight-bold" style="font-size: 1.5em;">#</th>
+            <th scope="col" class="text-center font-weight-bold" style="font-size: 1.5em;">ອາຫານ</th>
+            <th scope="col" class="text-center font-weight-bold" style="font-size: 1.5em;">ຕົ້ນທືນ</th>
+            <th scope="col" class="text-center font-weight-bold" style="font-size: 1.5em;">ລາຄາຂາຍ</th>
+            <th scope="col" class="text-center font-weight-bold" style="font-size: 1.5em;">ປະເພດ</th>
+            <th scope="col" class="text-center font-weight-bold" style="font-size: 1.5em;">ຄົວ</th>
+            <th scope="col" class="text-center font-weight-bold" style="font-size: 1.5em;">ສ່ວນປະກອບ</th>
+            <th scope="col" class="text-center font-weight-bold" style="font-size: 1.5em;">ແກ້ໄຂ</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let bom of boms | async; let i = index">
+            <td class="text-center align-middle" style="width: 50px; font-size: 1.2em">{{ i + 1  }}</td>
+            <td class="text-left align-middle" style="width: 300px;font-size: 1.2em">{{ bom.food.food_name }}</td>
+            <td class="text-right align-middle" style="width: 100px;font-size: 1.2em">{{ bom.food.cost | number }}</td>
+            <td class="text-right align-middle" style="width: 100px;font-size: 1.2em">{{ bom.food.price | number }}</td>
+            <td class="text-center align-middle" style="width: 100px;font-size: 1.2em">{{ bom.food.food_category }}</td>
+            <td class="text-center align-middle" style="width: 100px;font-size: 1.2em">{{ bom.food.kitchen }}</td>
+            <td class="text-center align-middle" style="width: 300px;font-size: 1.2em">
+              <table class="table table-bordered">
+                <thead class="thead-light">
+                  <tr>
+                    <th scope="col" class="text-center">ວັດຖຸດິບ</th>
+                    <th scope="col" class="text-center">ຈຳນວນ</th>
+                    <th scope="col" class="text-center">ຫົວໜ່ວຍ</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let product of bom.products">
+                    <td class="text-left">{{ product.productName }}</td>
+                    <td class="text-right">{{ product.bom_quantity | number }}</td>
+                    <td class="text-center">{{ product.unit }}</td>
+                  </tr>
+                </tbody>
+              </table>
+            </td>
+            <td class="text-center align-middle" style="width: 150px;">
+              <div class="row">
+                <div class="col col-md-6">
+                  <button mat-raised-button color="primary" (click)="openUpdateBOM(bom)">Update</button>
+                </div>
+                <div class="col col-md-6">
+                  <button mat-raised-button color="warn">Remove</button>
+                </div>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </mat-card-content>
+</mat-card>
